[package]
name = "lau-optimization"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-optimization"
description = "General optimization algorithms: line search, gradient descent, conjugate gradient, quasi-Newton, Nelder-Mead, simulated annealing, particle swarm, multi-objective, and constraint handling"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
approx = "0.5"
